Additional security measures - Changed AccessToken to full confidentiality. - CSRF - Generate a State for each Session - Randomized and advanced SessionSecret settings - From a browser (Cookie and CSRF) - From programs such as CURL (Authorized Header)
