# ros2/rdbox/sros2_oidc/relaying_party/controllers/ros2_amcl_controller.py
@@ -11,12 +11,13 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+import uuid
 
 import flask
-from flask import current_app
+from flask import current_app, session
 
 
-def come_to_me(token_info):  # noqa: E501
+def come_to_me(token_info, csrf=None):  # noqa: E501
     """come_to_me
 
     # noqa: E501
@@ -24,7 +25,31 @@ def come_to_me(token_info):  # noqa: E501
 
     :rtype: str
     """
-    raw_taken = flask.request.headers.get('Authorization')[7:]
+    if flask.request.headers.get('Authorization', None) is None:
+        raw_taken = session.get('RDBOX_ACCESS_TOKEN', None)
+        if raw_taken is not None:
+            correct_csrf = session.pop('/ros2/amcl/come_to_me/csrf', None)
+            if correct_csrf is None:
+                return 'Invalid Request(TimeOut or Unauthorized or Recycled)'
+            if correct_csrf != csrf:
+                return 'Invalid Request(You need back to /ros2)'
+    else:
+        raw_taken = flask.request.headers.get('Authorization')[7:]
+    if raw_taken is None:
+        return 'Invalid token (TimeOut or Unauthorized)'
     jwt_talker = current_app.config['jwt_talker']
     jwt_talker.publish(raw_taken)
-    return 'No Error Found'
+    return 'Success'
+
+
+def ros2():
+    """ros2
+
+    # noqa: E501
+
+
+    :rtype: str
+    """
+    csrf = str(uuid.uuid4())
+    session['/ros2/amcl/come_to_me/csrf'] = csrf
+    return flask.render_template('ros2.html', csrf=csrf)
